added search, connected backend

--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
+    "knex": "^3.1.0",
     "material-ui-search-bar": "^1.0.1",
+    "mysql2": "^3.10.3",
     "next": "14.2.5",
+    "oracledb": "^6.5.1",
+    "pg-query-stream": "^4.6.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8"
