--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "mysql2": "^3.10.3",
     "next": "14.2.5",
     "oracledb": "^6.5.1",
+    "pg": "^8.12.0",
     "pg-query-stream": "^4.6.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "sass": "^1.77.8"
   },
