--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-masonry-css": "^1.0.16",
     "sass": "^1.77.8"
   },
   "devDependencies": {
