--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "material-ui-search-bar": "^1.0.1",
     "mysql2": "^3.10.3",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "oracledb": "^6.5.1",
     "pg": "^8.12.0",
     "pg-query-stream": "^4.6.0",
