--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "axios": "^1.7.7",
+    "flowbite-react": "^0.10.1",
     "knex": "^3.1.0",
     "material-ui-search-bar": "^1.0.1",
     "mysql2": "^3.10.3",
