added fixed for ads

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,16 @@ MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
 MYSQL_PORT=
+
+GOOGLE_CLIENT_ID=3452039032-te4oc04abn9qbad0vlm6t8qleo4i2c5n.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=MySecret
+
+API_URL=http://localhost:5000/api
+
+ADS_SYSTEM="google.com"
+ADS_PUBLISHER_ID="pub-1234567890123456"
+ADS_ACCOUNT_TYPE="DIRECT"
+ADS_AUTH_ID="f08c47fec0942fa0"
