--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "axios": "^1.7.7",
+    "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
     "knex": "^3.1.0",
     "material-ui-search-bar": "^1.0.1",
@@ -29,12 +30,14 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-masonry-css": "^1.0.16",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "typescript": "^5"
