--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "axios": "^1.7.7",
+    "dompurify": "^3.1.6",
     "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
     "knex": "^3.1.0",
+    "markdown-it": "^14.1.0",
     "material-ui-search-bar": "^1.0.1",
     "mysql2": "^3.10.3",
     "next": "14.2.5",
@@ -29,7 +31,9 @@
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-masonry-css": "^1.0.16",
+    "react-quill": "^2.0.0",
     "sass": "^1.77.8",
     "uuid": "^10.0.0"
   },
