--- a/package.json
+++ b/package.json
@@ -11,26 +11,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.16.1",
-    "@mui/material": "^5.16.1",
+    "@tailwindcss/postcss": "^4.0.1",
     "axios": "^1.7.7",
     "dompurify": "^3.1.6",
     "firebase": "^10.13.1",
-    "flowbite-react": "^0.10.1",
     "knex": "^3.1.0",
+    "lucide-react": "^0.474.0",
     "markdown-it": "^14.1.0",
-    "material-ui-search-bar": "^1.0.1",
     "mysql2": "^3.12.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "oracledb": "^6.5.1",
     "pg": "^8.12.0",
     "pg-query-stream": "^4.6.0",
-    "react": "^18",
+    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18",
+    "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-markdown": "^9.0.1",
     "react-masonry-css": "^1.0.16",
     "react-quill": "^2.0.0",
@@ -42,8 +38,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.1",
     "typescript": "^5"
   }
 }
